--- a/codebase/style.css
+++ b/codebase/style.css
@@ -1,4 +1,3 @@
-  
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
 * {
@@ -12,13 +11,29 @@ input {
   font-family: "Poppins", sans-serif;
 }
 
-/* .container{
+.cotainer2 {
    position: relative;
   width: 100%;
   background-color: #fff;
   min-height: 100vh;
   overflow: hidden;
-} */
+
+}
+.container {
+  position: relative;
+  width: 100%;
+  background-color: #fff;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.forms-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
 
 .signin-signup {
   position: absolute;
@@ -44,19 +59,13 @@ form {
   grid-row: 1 / 2;
 }
 
-.btn {
-  width: 150px;
-  background-color: #5995fd;
-  border: none;
-  outline: none;
-  height: 49px;
-  border-radius: 49px;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin: 10px 0;
-  cursor: pointer;
-  transition: 0.5s;
+form.sign-up-form {
+  opacity: 0;
+  z-index: 1;
+}
+
+form.sign-in-form {
+  z-index: 2;
 }
 
 .title {
@@ -106,8 +115,54 @@ form {
   
 }
 
+.social-text {
+  padding: 0.7rem 0;
+  font-size: 1rem;
+}
 
+.social-media {
+  display: flex;
+  justify-content: center;
+}
 
+.social-icon {
+  height: 46px;
+  width: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0.45rem;
+  color: #333;
+  border-radius: 50%;
+  border: 1px solid #333;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.social-icon:hover {
+  color: #4481eb;
+  border-color: #4481eb;
+}
+
+.btn {
+  width: 150px;
+  background-color: #5995fd;
+  border: none;
+  outline: none;
+  height: 49px;
+  border-radius: 49px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.btn:hover {
+  background-color: #4d84e2;
+}
 .panels-container {
   position: absolute;
   height: 100%;
@@ -118,7 +173,7 @@ form {
   grid-template-columns: repeat(2, 1fr);
 }
 
-/* .container:before {
+.container:before {
   content: "";
   position: absolute;
   height: 2000px;
@@ -130,57 +185,113 @@ form {
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
-} */
+}
   
-.image2{
-  width: 50%;
+.image {
+  width: 100%;
   transition: transform 1.1s ease-in-out;
   transition-delay: 0.4s;
 }
+.image2{
+  width: 40%;
+  transition: transform 1.1s ease-in-out;
+  transition-delay: 0.4s;
+}
+.panel {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  text-align: center;
+  z-index: 6;
+}
 
+.left-panel {
+  pointer-events: all;
+  padding: 3rem 17% 2rem 12%;
+}
+
+.right-panel {
+  pointer-events: none;
+  padding: 3rem 12% 2rem 17%;
+}
+
+.panel .content {
+  color: #fff;
+  transition: transform 0.9s ease-in-out;
+  transition-delay: 0.6s;
+}
+
+.panel h3 {
+  font-weight: 600;
+  line-height: 1;
+  font-size: 1.5rem;
+}
+
+.panel p {
+  font-size: 0.95rem;
+  padding: 0.7rem 0;
+}
+
+.btn.transparent {
+  margin: 0;
+  background: none;
+  border: 2px solid #fff;
+  width: 130px;
+  height: 41px;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.right-panel .image,
+.right-panel .content {
+  transform: translateX(800px);
+}
 
 /* ANIMATION */
 
-/* .container.sign-up-mode:before {
+.container.sign-up-mode:before {
   transform: translate(100%, -50%);
   right: 52%;
 }
+
 .container.sign-up-mode .left-panel .image,
 .container.sign-up-mode .left-panel .content {
   transform: translateX(-800px);
 }
+
 .container.sign-up-mode .signin-signup {
   left: 25%;
 }
+
 .container.sign-up-mode form.sign-up-form {
   opacity: 1;
   z-index: 2;
 }
+
 .container.sign-up-mode form.sign-in-form {
   opacity: 0;
   z-index: 1;
 }
+
 .container.sign-up-mode .right-panel .image,
 .container.sign-up-mode .right-panel .content {
   transform: translateX(0%);
 }
+
 .container.sign-up-mode .left-panel {
   pointer-events: none;
 }
+
 .container.sign-up-mode .right-panel {
   pointer-events: all;
-} */
+}
 
 @media (max-width: 870px) {
   .container {
     min-height: 800px;
     height: 100vh;
   }
-   
-    form {
-    padding: 0 1.5rem;
-  }
-
   .signin-signup {
     width: 100%;
     top: 95%;
@@ -214,14 +325,33 @@ form {
     grid-row: 1 / 2;
   }
 
-  .image2 {
-    width: 20px;
+  .image {
+    width: 200px;
     transition: transform 0.9s ease-in-out;
     transition-delay: 0.6s;
-   
   }
 
-  
+  .panel .content {
+    padding-right: 15%;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.8s;
+  }
+
+  .panel h3 {
+    font-size: 1.2rem;
+  }
+
+  .panel p {
+    font-size: 0.7rem;
+    padding: 0.5rem 0;
+  }
+
+  .btn.transparent {
+    width: 110px;
+    height: 35px;
+    font-size: 0.7rem;
+  }
+
   .container:before {
     width: 1500px;
     height: 1500px;
@@ -239,17 +369,17 @@ form {
     right: initial;
   }
 
-  .container.sign-up-mode .left-panel .image2,
+  .container.sign-up-mode .left-panel .image,
   .container.sign-up-mode .left-panel .content {
     transform: translateY(-300px);
   }
 
-  .container.sign-up-mode .right-panel .image2,
+  .container.sign-up-mode .right-panel .image,
   .container.sign-up-mode .right-panel .content {
     transform: translateY(0px);
   }
 
-  .right-panel .image2,
+  .right-panel .image,
   .right-panel .content {
     transform: translateY(300px);
   }
@@ -260,12 +390,12 @@ form {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 570px) {
   form {
     padding: 0 1.5rem;
   }
 
-  .image2 {
+  .image {
     display: none;
   }
   .panel .content {
@@ -285,10 +415,3 @@ form {
     left: 50%;
   }
 }
-/* @media (max-width:1260px)
-{
-    .image2{
-     width: 50%;
-     align-items: center;
-    }
-} */
