Changes over time

--- a/codebase/details.css
+++ b/codebase/details.css
@@ -68,7 +68,7 @@ form {
 .input-field {
   max-width: 380px;
   width: 100%;
-  background-color: #f0f0f0;
+  background-color:antiquewhite;
   margin: 10px 0;
   height: 55px;
   border-radius: 55px;
